2_nginx_ingress/nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "9113"
spec:
  type: LoadBalancer
#  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  - port: 30880
    targetPort: 30880
    nodePort: 30880
    protocol: TCP
    name: httpv2
  - port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress

---
apiVersion: v1
kind: Service
metadata:
  name: svc-appprotect-dos-arb
  namespace: nginx-ingress
spec:
  selector:
    app: appprotect-dos-arb
  ports:
    - name: arb
      port: 3000
      protocol: TCP
      targetPort: 3000
  clusterIP: None
